<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="music_pre">Previous</string>
    <string name="music_play">Play</string>
    <string name="music_pause">Pause</string>
    <string name="music_next">Next</string>

    <string name="music_home_tab">Music</string>
    <string name="music_online_tab">Online</string>
    <string name="music_mine_tab">Mine</string>
    <string name="music_time">00:00</string>

    <string name="music_not_play">Not Play</string>
    <string name="music_unknown">Unknown</string>
</resources>