<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:binding="http://schemas.android.com/tools">

    <data>

        <import type="com.artillery.musicmain.viewmodel.MusicMainViewModel" />

        <variable
            name="musicMain"
            type="MusicMainViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/music_frame"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/music_briefly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_20"
            app:layout_constraintBottom_toTopOf="@+id/music_action_liner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/music_name_play"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_30"
                android:text="@string/music_not_play"
                android:textSize="@dimen/sp_20"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/music_artist_play"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:text="@string/music_unknown"
                android:textSize="@dimen/sp_10"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/music_name_play" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/music_action_liner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_5"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/music_progress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/music_pre_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/rewind"
                binding:onClickCommand="@{musicMain.mPre}" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/music_play_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_50"
                android:layout_marginEnd="@dimen/dp_50"
                android:src="@drawable/play"
                binding:onClickCommand="@{musicMain.mPlay}" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/music_next_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/speed"
                binding:onClickCommand="@{musicMain.mNext}" />

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/music_progress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/music_group"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <SeekBar
                android:id="@+id/music_seekbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:max="100"
                android:maxHeight="@dimen/dp_3"
                android:progress="0"
                android:progressDrawable="@drawable/music_seekbar_progress"
                android:thumb="@null"
                android:thumbOffset="@dimen/dp_0"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/music_time_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_10"
                android:text="@string/music_time"
                android:textSize="@dimen/sp_12"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/music_seekbar" />

            <TextView
                android:id="@+id/music_time_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dp_10"
                android:text="@string/music_time"
                android:textSize="@dimen/sp_12"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/music_seekbar" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <RadioGroup
            android:id="@+id/music_group"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/music_main"
                style="@style/CustomRadioButton"
                android:layout_width="@dimen/dp_0"
                android:layout_height="match_parent"
                android:text="@string/music_home_tab" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/music_online"
                style="@style/CustomRadioButton"
                android:layout_width="@dimen/dp_0"
                android:layout_height="match_parent"
                android:text="@string/music_online_tab" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/music_mine"
                style="@style/CustomRadioButton"
                android:layout_width="@dimen/dp_0"
                android:layout_height="match_parent"
                android:text="@string/music_mine_tab" />

        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>