<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:binding="http://schemas.android.com/tools">

    <data>

        <import type="com.artillery.musicmain.viewmodel.MusicDialogViewModel" />

        <variable
            name="musicDialog"
            type="MusicDialogViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/music_frame"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/music_briefly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/music_name_play"
                android:layout_width="@dimen/dp_150"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:ellipsize="marquee"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:freezesText="true"
                android:gravity="center_horizontal"
                android:lines="1"
                android:marqueeRepeatLimit="marquee_forever"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:text="@string/music_not_play"
                android:textSize="@dimen/sp_20"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/music_artist_play"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_marginBottom="@dimen/dp_10"
                android:text="@string/music_unknown"
                android:textSize="@dimen/sp_10"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/music_name_play" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/music_progress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <SeekBar
                android:id="@+id/music_seekbar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_30"
                android:background="@null"
                android:maxHeight="@dimen/dp_5"
                android:progress="0"
                android:progressDrawable="@drawable/music_seekbar_progress"
                android:thumb="@null"
                android:thumbOffset="@dimen/dp_0"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/music_time_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_15"
                android:text="@string/music_time"
                android:textSize="@dimen/sp_12"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/music_seekbar" />

            <TextView
                android:id="@+id/music_time_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dp_15"
                android:text="@string/music_time"
                android:textSize="@dimen/sp_12"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/music_seekbar" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/music_action_liner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/dp_10"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/music_pre_btn"
                style="@style/CustomButtonRipple"
                android:layout_width="@dimen/dp_60"
                android:layout_height="@dimen/dp_60"
                android:src="@drawable/previous"
                binding:onClickCommand="@{musicDialog.mPre}" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/music_play_btn"
                style="@style/CustomButtonRipple"
                android:layout_width="@dimen/dp_60"
                android:layout_height="@dimen/dp_60"
                android:layout_marginStart="@dimen/dp_50"
                android:layout_marginEnd="@dimen/dp_50"
                android:src="@drawable/play"
                binding:onClickCommand="@{musicDialog.mPlay}" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/music_next_btn"
                style="@style/CustomButtonRipple"
                android:layout_width="@dimen/dp_60"
                android:layout_height="@dimen/dp_60"
                android:src="@drawable/next"
                binding:onClickCommand="@{musicDialog.mNext}" />

        </LinearLayout>

    </LinearLayout>

</layout>